<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Trackor</string>
	<string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="list">List</string>
	<string name="hint">Tracking NO</string>
    <string name="archive">Archive</string>
    <string name="label">Label</string>
    <string name="title_activity_detail">Detail</string>
    <string name="archive_dialog_title">Archive this tracking?</string>
    <string name="add_tag_dialog_title">New tag to this tracking?</string>
    <string name="capture">Capture</string>
    <string name="widget_add">Add a new tracking</string>
    <string name="default_detail">Sorry, the tracking information may not available now.</string>
    <string-array name="carriers">
	    <item>UPS</item>
	    <item>FedEx</item>
	    <item>USPS</item>
        <item>LASERSHIP</item>
	</string-array>
    <string-array name="show_type">
        <item>Active</item>
        <item>Archive</item>
    </string-array>

    <string name="map_endpoint"></string>
    <string name="lasership_web_url"></string>
    <string name="ups_web_url"></string>

    <string name="pref_sync_cat_title">Sync</string>
    <string name="pref_sync">Auto Sync</string>
    <string name="pref_sync_sum">Auto update tracking information.</string>
    <string name="pref_sync_freq">Sync Frequence</string>
    <string name="pref_sync_freq_sum">Choose the sync frequencey.</string>
    <string name="pref_sync_freq_default">60</string>
    <string-array name="pref_sync_freq_list_key">
        <item>30 minutes</item>
        <item>60 minutes</item>
        <item>2 hours</item>
        <item>6 hours</item>
    </string-array>
    <string-array name="pref_sync_freq_list_value">
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>360</item>
    </string-array>

    <string name="pref_about_cat_title">About</string>
    <string name="pref_help">Help</string>
    <string name="pref_help_sum">Get help on how to use Trackor!</string>
    <string name="pref_tos">Term of Service</string>
    <string name="pref_pp">Privacy Policy</string>
    <string name="pref_version">Trackor v1.0</string>
    <string name="pref_version_sum">Thank you for downloading. Enjoy!</string>
</resources>