<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/pref_sync_cat_title"
        android:key="pref_sync_cat">
        <CheckBoxPreference
            android:key="pref_sync"
            android:title="@string/pref_sync"
            android:summary="@string/pref_sync_sum"
            android:defaultValue="false" />
        <ListPreference
            android:dependency="pref_sync"
            android:key="pref_sync_freq"
            android:title="@string/pref_sync_freq"
            android:summary="@string/pref_sync_freq_sum"
            android:entries="@array/pref_sync_freq_list_key"
            android:entryValues="@array/pref_sync_freq_list_value"
            android:defaultValue="@string/pref_sync_freq_default" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_about_cat_title"
        android:key="pref_about_cat">
        <Preference
            android:key="pref_help"
            android:title="@string/pref_help"
            android:summary="@string/pref_help_sum" />
        <Preference
            android:key="pref_tos"
            android:title="@string/pref_tos" />
        <Preference
            android:key="pref_pp"
            android:title="@string/pref_pp" />
        <Preference
            android:key="pref_version"
            android:title="@string/pref_version"
            android:summary="@string/pref_version_sum"
            android:enabled="false" />
    </PreferenceCategory>
</PreferenceScreen>